--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "framer-motion": "^10.12.8",
     "next": "13.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "eslint-config-google": "^0.14.0"
