--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
