--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/anatomy": "^2.1.1",
     "@chakra-ui/next-js": "^2.1.3",
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
@@ -16,7 +17,7 @@
     "@vercel/analytics": "^1.0.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
-    "framer-motion": "^10.12.8",
+    "framer-motion": "^10.12.16",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
