--- a/package.json
+++ b/package.json
@@ -9,22 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/anatomy": "^2.1.1",
-    "@chakra-ui/next-js": "^2.1.3",
-    "@chakra-ui/react": "^2.6.1",
-    "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@vercel/analytics": "^1.0.1",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.1",
+    "@mantine/core": "^7.17.2",
+    "@mantine/hooks": "^7.17.2",
+    "@next/third-parties": "^15.2.4",
+    "@tabler/icons-react": "^3.31.0",
     "framer-motion": "^10.12.16",
-    "next": "^13.4.12",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
+    "next": "^15.2.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
-    "eslint-config-google": "^0.14.0"
-  }
+    "@types/node": "^22.13.13",
+    "@types/react": "^19.0.12",
+    "css-loader": "^7.1.2",
+    "eslint": "^9.23.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.4",
+    "postcss": "^8.5.3",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
+    "prettier": "^3.5.3",
+    "style-loader": "^4.0.0",
+    "typescript": "^5.8.2"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
