--- a/package.json
+++ b/package.json
@@ -13,19 +13,25 @@
     "@mantine/core": "^7.17.2",
     "@mantine/hooks": "^7.17.2",
     "@next/third-parties": "^15.2.4",
+    "@react-three/drei": "^10.0.5",
+    "@react-three/fiber": "^9.1.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@tabler/icons-react": "^3.31.0",
     "framer-motion": "^10.12.16",
     "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "three": "^0.174.0",
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.13.13",
     "@types/react": "^19.0.12",
+    "@types/three": "^0.174.0",
     "css-loader": "^7.1.2",
     "eslint": "^9.23.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-next": "^15.2.4",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.4",
     "postcss": "^8.5.3",
