--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/third-parties": "^15.2.4",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -23,10 +24,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^10.12.16",
-    "lucide-react": "^0.545.0",
+    "lucide-react": "^0.556.0",
     "next": "^15.2.4",
+    "nuqs": "^2.8.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "2.15.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
     "three": "^0.174.0",
