Update Next.js, React, and related dependencies
Bump Next.js to 15.2.6, React and ReactDOM to 19.0.1, and update related dependencies in package.json and yarn.lock. This includes updates to sharp and its dependencies, as well as the addition of new dependencies required by the latest Next.js version.

--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "clsx": "^2.1.1",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.556.0",
-    "next": "^15.2.4",
+    "next": "15.2.6",
     "nuqs": "^2.8.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.0.1",
+    "react-dom": "^19.0.1",
     "recharts": "2.15.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
