--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nuqs": "^2.8.3",
     "react": "^19.0.1",
     "react-dom": "^19.0.1",
+    "react-medium-image-zoom": "^5.4.0",
     "recharts": "2.15.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
